tests/baselines/reference/typesWithPrivateConstructor.errors.txt
==== tests/cases/compiler/typesWithPrivateConstructor.ts (6 errors) ====
    // private constructors are not allowed
    
    class C {
        private constructor() { }
        ~~~~~~~
!!! error TS1089: 'private' modifier cannot appear on a constructor declaration.
    }
    
    var c = new C();
    var r: () => void = c.constructor;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Function' to '() => void':
!!! 	Type '() => void' requires a call signature, but type 'Function' lacks one.
    
    class C2 {
        private constructor(x: number);
        ~~~~~~~
!!! error TS1089: 'private' modifier cannot appear on a constructor declaration.
        private constructor(x: any) { }
        ~~~~~~~
!!! error TS1089: 'private' modifier cannot appear on a constructor declaration.
    }
    
    var c2 = new C2();
                 ~~
!!! error TS2081: Supplied parameters do not match any signature of call target.
                 ~~
!!! error TS2085: Could not select overload for 'new' expression.
    var r2: (x: number) => void = c2.constructor;